--- a/ECommerce/Web.config
+++ b/ECommerce/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ECommerce-20180307083529.mdf;Initial Catalog=aspnet-ECommerce-20180307083529;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-R6H2BJC\SQLEXPRESS;Initial Catalog=ECommerceDB;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
