43 and 44: Configuring the user photo in the function edit (UsersController.cs). Configuration the Super User in Web.config.

--- a/ECommerce/Web.config
+++ b/ECommerce/Web.config
@@ -21,6 +21,11 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!--Super User-->
+    <add key="AdminUser" value="adminsuperuser@gmail.com" />
+    <add key="AdminPassword" value="Admin123." />
+    <add key="SMTPName" value="smtp.gmail.com" />
+    <add key="SMTPPort" value="587" />    
   </appSettings>
   <system.web>
     <authentication mode="None" />
