45, 46, 47, and 48: New Class MailHelper.cs to send mail and UserHelper.cs to recover super user password. 49: Delete user. 50 and 51: update user name.

--- a/ECommerce/ECommerce.csproj
+++ b/ECommerce/ECommerce.csproj
@@ -201,6 +201,8 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Class\ComboHelper.cs" />
     <Compile Include="Class\FileHelper.cs" />
+    <Compile Include="Class\MailHelper.cs" />
+    <Compile Include="Class\UserHelper.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CitiesController.cs" />
     <Compile Include="Controllers\CompaniesController.cs" />
