--- a/ECommerce/Web.config
+++ b/ECommerce/Web.config
@@ -21,7 +21,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <!--Super User-->
+    <!--Super User (MailHelper.cs)-->
     <add key="AdminUser" value="adminsuperuser@gmail.com" />
     <add key="AdminPassword" value="Admin123." />
     <add key="SMTPName" value="smtp.gmail.com" />
